--- a/front/public/index.html
+++ b/front/public/index.html
@@ -11,7 +11,7 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Go Watch Movies</title>
+    <title>スタスク</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
